@@ -49,7 +49,13 @@
 //
 //==========================================================================
 
+#include <cyg/io/spi.h>
+#include <cyg/io/spi_avr32.h>
+#include <cyg/hal/gpio.h>
+#include <cyg/kernel/kernel.h>
+#include <cyg/hal/board_config.h>
 
+externC cyg_spi_avr32_device_t lcd_spi_device;
 
 // Switch on a framebuffer device. This may get called multiple
 // times, e.g. when switching between different screen modes.
@@ -57,21 +63,44 @@
 static int
 cyg_synth_fb_on(struct cyg_fb* fb)
 {
-    synth_fb_data*  fb_data = (synth_fb_data*) fb->fb_driver2;
-    if (fb_data->connected) {
-        synth_auxiliary_xchgmsg(fb_data->devid, SYNTH_FB_ON, 0, 0, 0, 0, 0, 0, 0, 0);
-    }
-
+    cyg_uint8 tx_data[15];
+    gpio_set_pin_high(LCD_RESET_PIN);
+    cyg_thread_delay(1);
+    
+    tx_data[0]  = DISP_SET_START_LINE | 0x00;
+    tx_data[1]  = DISP_SET_ADC_REVERS;
+    tx_data[2]  = DISP_SHL_NORMAL;
+    tx_data[3]  = DISP_REVERS_OFF;
+    tx_data[4]  = DISP_POWR_CONTROL | 0x07;
+    tx_data[5]  = DISP_BOOSTER_RATION;
+    tx_data[6]  = 0x00;
+    tx_data[7]  = DISP_REG_RES_SELECT | 0x03;
+    tx_data[8]  = DISP_SET_REF_VM;
+    tx_data[9]  = 0x1f;
+    tx_data[10] = DISP_SET_STATIC_IND;
+    tx_data[11] = 0x00;
+    tx_data[12] = DISP_ON;
+   
+    gpio_set_pin_low(AVR32_PIN_PC15);
+    
+    cyg_spi_transaction_begin((cyg_spi_device*)&lcd_spi_device);
+    cyg_spi_transaction_transfer((cyg_spi_device*)&lcd_spi_device, true, 12, tx_data, NULL, true);
+    cyg_spi_transaction_end((cyg_spi_device*)&lcd_spi_device);
+    
     return 0;
 }
 
 static int
 cyg_synth_fb_off(struct cyg_fb* fb)
 {
-    synth_fb_data*  fb_data = (synth_fb_data*) fb->fb_driver2;
-    if (fb_data->connected) {
-        synth_auxiliary_xchgmsg(fb_data->devid, SYNTH_FB_OFF, 0, 0, 0, 0, 0, 0, 0, 0);
-    }
+    tx_data[4];
+    tx_data[0] = DISP_OFF;
+   
+    gpio_set_pin_low(AVR32_PIN_PC15);
+    
+    cyg_spi_transaction_begin((cyg_spi_device*)&lcd_spi_device);
+    cyg_spi_transaction_transfer((cyg_spi_device*)&lcd_spi_device, true, 1, tx_data, NULL, true);
+    cyg_spi_transaction_end((cyg_spi_device*)&lcd_spi_device);
     return 0;
 }
 
@@ -81,104 +110,34 @@ cyg_synth_fb_ioctl(struct cyg_fb* fb, cyg_ucount16 key, void* data, size_t* len)
     synth_fb_data*  fb_data = (synth_fb_data*) fb->fb_driver2;
     int             result  = ENOSYS;
 
-    switch(key) {
-      case CYG_FB_IOCTL_VIEWPORT_GET_POSITION:
-        DEBUG(1, "cyg_synth_fb_ioctl: viewport_get_position\n");
-        if (fb->fb_flags0 & CYG_FB_FLAGS0_VIEWPORT) {
-            cyg_fb_ioctl_viewport*  viewport = (cyg_fb_ioctl_viewport*)data;
-            CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_viewport), "data argument should be a cyg_fb_ioctl_viewport structure");
-            viewport->fbvp_x    = fb_data->viewport_x;
-            viewport->fbvp_y    = fb_data->viewport_y;
-            result  = 0;
-            DEBUG(1, "                  : current viewport x %d, y %d\n", fb_data->viewport_x, fb_data->viewport_y);
-        } else {
-            DEBUG(1, "                  : framebuffer does not support a viewport\n");
-        }
-        break;
-      case CYG_FB_IOCTL_VIEWPORT_SET_POSITION:
-        DEBUG(1, "cyg_synth_fb_ioctl: viewport_set_position\n");
-        if (fb->fb_flags0 & CYG_FB_FLAGS0_VIEWPORT) {
-            cyg_fb_ioctl_viewport*  viewport = (cyg_fb_ioctl_viewport*)data;
-            CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_viewport), "data argument should be a cyg_fb_ioctl_viewport structure");
-            CYG_ASSERT(((viewport->fbvp_x + fb->fb_viewport_width) <= fb->fb_width) &&
-                       ((viewport->fbvp_y + fb->fb_viewport_height) <= fb->fb_height),
-                       "viewport should be within framebuffer dimensions");
-            DEBUG(1, "                  : setting viewport from x %d, y %d to x %d, y %d\n",
-                  fb_data->viewport_x, fb_data->viewport_y, (int) viewport->fbvp_x, (int) viewport->fbvp_y);
-            if ((fb_data->viewport_x != (int)viewport->fbvp_x) || (fb_data->viewport_y != (int)viewport->fbvp_y)) {
-                fb_data->viewport_x = (int)viewport->fbvp_x;
-                fb_data->viewport_y = (int)viewport->fbvp_y;
-                fb_op(fb, SYNTH_FB_VIEWPORT);
-            }
-            result = 0;
-        } else {
-            DEBUG(1, "                  : framebuffer does not support a viewport\n");
-        }
-        break;
-      case CYG_FB_IOCTL_PAGE_FLIPPING_GET_PAGES:
-        DEBUG(1, "cyg_synth_fb_ioctl: page_flipping_get_pages\n");
-        if (fb->fb_flags0 & CYG_FB_FLAGS0_PAGE_FLIPPING) {
-            cyg_fb_ioctl_page_flip* page_flip = (cyg_fb_ioctl_page_flip*)data;
-            CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_page_flip), "data argument should be a cyg_fb_ioctl_page_flip structure");
-            page_flip->fbpf_number_pages    = fb->fb_driver1;
-            page_flip->fbpf_visible_page    = fb_data->page_visible;
-            page_flip->fbpf_drawable_page   = fb_data->page_drawable;
-            result = 0;
-            DEBUG(1, "                  : number_pages %d, visible page %d, drawable page %d\n",
-                  fb->fb_driver1, fb_data->page_visible, fb_data->page_drawable);
-        } else {
-            DEBUG(1, "                  : framebuffer does not support page flipping\n");
-        }
-        break;
-      case CYG_FB_IOCTL_PAGE_FLIPPING_SET_PAGES:
-        DEBUG(1, "cyg_synth_fb_ioctl: page_flipping_set_pages\n");
-        if (fb->fb_flags0 & CYG_FB_FLAGS0_PAGE_FLIPPING) {
-            cyg_fb_ioctl_page_flip* page_flip = (cyg_fb_ioctl_page_flip*)data;
-            cyg_uint8*  fb_base;
-            
-            CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_page_flip), "data argument should be a cyg_fb_ioctl_page_flip structure");
-            CYG_ASSERT((page_flip->fbpf_visible_page  < fb->driver1) &&
-                       (page_flip->fbpf_drawable_page < fb->driver1),
-                       "framebuffer does not have that many pages");
-            DEBUG(1, "                  : drawable page was %d, now %d, visible page was %d, now %d\n",
-                  fb_data->page_drawable, (int)page_flip->fbpf_drawable_page,
-                  fb_data->page_visible, (int)page_flip->fbpf_visible_page);
-            fb_base  = (cyg_uint8*)fb->fb_base;
-            fb_base -= (fb->fb_height * fb->fb_stride * fb_data->page_drawable);
-            fb_data->page_drawable          = page_flip->fbpf_drawable_page;
-            fb_base += (fb->fb_height * fb->fb_stride * fb_data->page_drawable);
-            fb->fb_base = fb_base;
-            *(cyg_uint8**)fb->fb_driver3 = fb_base;
-            if (fb_data->page_visible != (int)page_flip->fbpf_visible_page) {
-                fb_data->page_visible = (int)page_flip->fbpf_visible_page;
-                fb_op(fb, SYNTH_FB_PAGE_FLIP);
-            }
-            result = 0;
-        } else {
-            DEBUG(1, "                  : framebuffer does not support page flipping\n");
-        }
-        break;
-      case CYG_FB_IOCTL_BLANK_GET:
-        {
-            cyg_fb_ioctl_blank* blank = (cyg_fb_ioctl_blank*)data;
-            DEBUG(1, "cyg_synth_fb_ioctl: blank_get, current on state %d\n", fb_data->blank_on);
-            CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_blank), "data argument should be a cyg_fb_ioctl_blank structure");
-            blank->fbbl_on  = fb_data->blank_on;
-            result = 0;
-        }
-        break;
-      case CYG_FB_IOCTL_BLANK_SET:
-        {
-            cyg_fb_ioctl_blank* blank = (cyg_fb_ioctl_blank*)data;
-            CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_blank), "data argument should be a cyg_fb_ioctl_blank structure");
-            DEBUG(1, "cyg_synth_fb_ioctl: blank_set, on was %d, now %d\n", fb_data->blank_on, blank->fbbl_on);
-            if (blank->fbbl_on != fb_data->blank_on) {
-                fb_data->blank_on = blank->fbbl_on;
-                fb_op(fb, SYNTH_FB_BLANK);
-            }
-            result = 0;
-        }
-        break;
+    switch(key)
+    {
+        case CYG_FB_IOCTL_BLANK_GET:
+          {
+              cyg_fb_ioctl_blank* blank = (cyg_fb_ioctl_blank*)data;
+              DEBUG(1, "cyg_synth_fb_ioctl: blank_get, current on state %d\n", fb_data->blank_on);
+              CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_blank), "data argument should be a cyg_fb_ioctl_blank structure");
+              blank->fbbl_on  = fb_data->blank_on;
+              result = 0;
+          }
+          break;
+        case CYG_FB_IOCTL_BLANK_SET:
+          {
+              cyg_fb_ioctl_blank* blank = (cyg_fb_ioctl_blank*)data;
+              CYG_ASSERT(*len == sizeof(cyg_fb_ioctl_blank), "data argument should be a cyg_fb_ioctl_blank structure");
+              DEBUG(1, "cyg_synth_fb_ioctl: blank_set, on was %d, now %d\n", fb_data->blank_on, blank->fbbl_on);
+              if (blank->fbbl_on != fb_data->blank_on) {
+                  fb_data->blank_on = blank->fbbl_on;
+                  fb_op(fb, SYNTH_FB_BLANK);
+              }
+              result = 0;
+          }
+          break;
+        case CYG_FB_IOCTL_BACKLIGHT_GET:
+            break;
+        case CYG_FB_IOCTL_BACKLIGHT_SET:
+            brak;
+        
       default:
         result  = ENOSYS;
         break;
@@ -190,9 +149,67 @@ cyg_synth_fb_ioctl(struct cyg_fb* fb, cyg_ucount16 key, void* data, size_t* len)
 void
 cyg_synth_fb_synch(struct cyg_fb* fb, cyg_ucount16 when)
 {
-    // FIXME: update synch_x0/y0/x1/y1 once the generic framebuffer
-    // code actually maintains a bounding box.
-    fb_op(fb, SYNTH_FB_SYNC);
+    int data_to_trasfer = fb->fb_stride*fb->fb_height;
+    unsigned char command_buf[3] =
+    {
+        DISP_SET_C_ADR_LSB,
+        DISP_SET_C_ADR_MSB,
+        DISP_SET_PAGE
+    };
+    #if LCD_DIG_LEVEL > 0
+    diag_printf("LCD draw\n");
+    #endif
+    //cyg_thread_delay(1);
+    gpio_set_pin_low(AVR32_PIN_PC15);
+    //mozna neblokujici ale nevim
+    cyg_spi_transaction_begin((cyg_spi_device*)&lcd_spi_device);
+
+    cyg_spi_transaction_transfer((cyg_spi_device*)&lcd_spi_device, true, 
+                                            3,(cyg_uint8*) command_buf, NULL, true);
+
+    cyg_spi_transaction_end((cyg_spi_device*)&lcd_spi_device);
+    //cyg_thread_delay(1);
+    gpio_set_pin_high(AVR32_PIN_PC15);
+    cyg_spi_transaction_begin((cyg_spi_device*)&lcd_spi_device);
+    cyg_spi_transaction_transfer((cyg_spi_device*)&lcd_spi_device, true, 
+                                            data_to_trasfer,(cyg_uint8*) buffer, NULL, true);
+    cyg_spi_transaction_end((cyg_spi_device*)&lcd_spi_device);
+}
+
+static cyg_fb_colour cyg_fb_get_buffer_pixel(cyg_ucount16 x, cyg_ucount16 y, 
+         const void* source, 
+        cyg_ucount16 offset, cyg_ucount16 stride)
+{
+    cyg_uint8 color_mask =  1;
+    cyg_uint8 *cbit_map = ((cyg_uint8*)source);
+
+    cyg_uint32 x_bit  = x&0x7;
+#if GRL_ENDIAN_TYPE == 0
+    return (cbit_map[y*stride + (x >> 3)] >> (7 - x_bit)) & color_mask;
+#else
+    return (cbit_map[(y*stride + x) >> 3] >> (x_bit)) & color_mask;
+#endif
+}
+
+static void cyg_fb_set_buffer_pixel(cyg_ucount16 x, cyg_ucount16 y, 
+         cyg_fb_colour colour, void* dest, 
+        cyg_ucount16 offset, cyg_ucount16 stride)
+{
+    cyg_uint8 *cbit_map       = (cyg_uint8*)source;
+    cyg_fb_colour color_mask  = 1;
+    colour                   &= color_mask;
+
+    cyg_uint32 x_bit = x&0x7;
+#if GRL_ENDIAN_TYPE == 0
+    colour <<= (7-x_bit);
+    color_mask <<= (7-x_bit);
+#else
+    colour <<= (x_bit);
+    color_mask <<= (x_bit);
+#endif
+
+    cbit_map[y*stride + (x >> 3)] &= ~color_mask;
+    cbit_map[y*stride + (x >> 3)] |= colour;
 }
 
 
@@ -254,11 +271,28 @@ void cyg_st7063_fb_write_vline_fn(cyg_fb* fb, cyg_ucount16 x, cyg_ucount16 y,
 void cyg_st7063_fb_fill_block_fn(cyg_fb* fb, cyg_ucount16 x, cyg_ucount16 y, 
         cyg_ucount16 width, cyg_ucount16 height, cyg_fb_colour colour)
 {
-    for(cyg_ucount16 iy = y; iy < (y + height); iy++)
+    for(cyg_ucount16 ix = x; ix < (x + width) && ix < fb->fb_width; ix++) 
     {
-        for(cyg_ucount16 ix = x; ix < (x + width); ix++) 
+        for(cyg_ucount16 iy = y; iy < (y + height) && iy < fb->fb_height; iy++)
         {
-            cyg_st7063_fb_write_pixel_fn(ix,iy,colour);
+            cyg_uint8 color_mask = 1;
+            colour &= color_mask;
+
+            // eni potreba mam jnom jednu moznost jedn bit jeden pixel
+            //y *=fb->fb_depth;// bits_per_pixel;
+
+            cyg_ucount16 y_byte = y >> 3;//y/8;
+            cyg_ucount16 y_bit  = y&0x07;//y%8;
+    #if GRL_ENDIAN_TYPE == 0
+            colour <<= (7-y_bit);
+            color_mask <<= (7-y_bit);
+    #else
+            colour <<= (y_bit);
+            color_mask <<= (y_bit);
+    #endif
+            cyg_uint8 *cbit_map = (cyg_uint8*)fb->fb_base;
+            cbit_map[y_byte*fb->fb_stride + x] &= ~color_mask;
+            cbit_map[y_byte*fb->fb_stride + x] |= colour;
         }
     }
 }
@@ -267,7 +301,14 @@ void cyg_st7063_fb_write_block_fn(cyg_fb* fb, cyg_ucount16 x, cyg_ucount16 y,
         cyg_ucount16 width, cyg_ucount16 height, const void* source, 
         cyg_ucount16 offset, cyg_ucount16 stride)
 {
-    
+    for(cyg_ucount16 ix = x, bx = 0; ix < (x + width) && ix < fb->fb_width; ix++, bx++) 
+    {
+        for(cyg_ucount16 iy = y, by = 0; iy < (y + height) && iy < fb->fb_height; iy++, by++)
+        {    
+            cyg_fb_colour colour = cyg_fb_get_buffer_pixel(bx, by, source, offset, stride);
+            cyg_st7063_fb_write_pixel_fn(fb, ix, iy,colour);
+        }
+    }
 }
 
 void  cyg_st7063_fb_read_block_fn(cyg_fb* fb, cyg_ucount16 x, cyg_ucount16 y, 
@@ -275,19 +316,34 @@ void  cyg_st7063_fb_read_block_fn(cyg_fb* fb, cyg_ucount16 x, cyg_ucount16 y,
         cyg_ucount16 offset, cyg_ucount16 stride)
 {
     
+    for(cyg_ucount16 ix = x, bx = 0; ix < (x + width) && ix < fb->fb_width; ix++, bx++) 
+    {
+        for(cyg_ucount16 iy = y, by = 0; iy < (y + height) && iy < fb->fb_height; iy++, by++)
+        {    
+            cyg_fb_colour colour = cyg_st7063_fb_read_pixel_fn(fb, ix, bi);
+            cyg_fb_set_buffer_pixel(bx, by,colour,dest, offset,stride);
+        }
+    }
 }
 
 void cyg_st7063_fb_move_block_fn(cyg_fb* fb, cyg_ucount16 x, cyg_ucount16 y, 
         cyg_ucount16 width, cyg_ucount16 height, cyg_ucount16 new_x, 
         cyg_ucount16 new_y)
 {
-
+    for(cyg_ucount16 ix = x, bx = new_x; ix < (x + width) && ix < fb->fb_width; ix++, bx++) 
+    {
+        for(cyg_ucount16 iy = y, by = new_y; iy < (y + height) && iy < fb->fb_height; iy++, by++)
+        {    
+            cyg_fb_colour colour = cyg_st7063_fb_read_pixel_fn(fb, ix, iy);
+            cyg_st7063_fb_write_pixel_fn(fb, bx, by, colour);
+        }
+    }
 }
 
 
 // A default area of memory for the framebuffer, if the auxiliary is not
 // running.
-static cyg_uint8            cyg_st7063_fb0_default_base[CYG_FB_ST7063_HEIGHT * 
+static cyg_uint8            cyg_st7063_fb_default_base[CYG_FB_ST7063_HEIGHT * 
                                               CYG_FB_ST7063_STRIDE];
 
 // Driver-specific data needed for interacting with the auxiliary.
@@ -301,7 +357,7 @@ CYG_FB_FRAMEBUFFER(CYG_FB_fb0_STRUCT,
                    CYG_FB_fb0_HEIGHT,
                    CYG_FB_fb0_VIEWPORT_WIDTH,
                    CYG_FB_fb0_VIEWPORT_HEIGHT,
-                   cyg_st7063_fb0_default_base,
+                   cyg_st7063_fb_default_base,
                    CYG_FB_fb0_STRIDE,
                    CYG_FB_fb0_FLAGS0,
                    CYG_FB_fb0_FLAGS1,
